# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import receiptsRouter from "./receipts";
 import authRouter from "./auth";
 import worldIdRouter from "./world-id";
+import filecoinRouter from "./filecoin";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(receiptsRouter);
 router.use(authRouter);
 router.use(worldIdRouter);
+router.use(filecoinRouter);
 
 export default router;
